# LFA

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Tema_1/: DFA.cpp  Lambda_NFA.cpp  NFA.cpp  NFA_path.cpp  input.txt  output.txt
Tema_2/: test.cpp  test.h
Tema_2/headers/: Global.h  NFA_to_DFA.h
Tema_2/scripts/: NFA_to_DFA.cpp  RegularExpresionToLambdaNFA.cpp
Tema_2/txts/: input_NFA_to_DFA.txt  tema2_output.txt
Tema_3/: Chomsky_to_CYK.cpp  Chomsky_to_CYK.txt  DPDA.cpp  DPDA.txt  FST.cpp  FST.txt
